samples/_failures_safe/1761125148_c3d9f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52d5581d.c: In function ‘main’:
./samples/SAFE/__tmp_52d5581d.c:160:9: error: expected declaration or statement at end of input
  160 |         printf("Data mismatch\n");
      |         ^~~~~~
./samples/SAFE/__tmp_52d5581d.c:160:9: error: expected declaration or statement at end of input
